feat(auth): Add user role field and refactor endpoints to extract user ID from JWT token
- Added `role` column to `UserEntity` with default value `USER`
- Created `Role` enum (`USER`, `ADMIN`) for better authorization control
- Updated `JwtRequestFilter` to extract user roles from JWT and set them in `SecurityContextHolder`
- Modified authentication logic to fetch `userId` from JWT instead of request path
- Refactored `/daily-diet-logs` endpoint to use authenticated user ID
- Improved Spring Data JPA pagination for better efficiency